[package]
name = "hyperswitch"
version = "0.1.0"
edition = "2021"
description = "A minimal, fast Windows 11 Alt+Tab-style app switcher that commits on hyperkey release."

[[bin]]
name = "hyperswitch"
path = "src/main.rs"

[build-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
ico = "0.3"
winresource = "0.1"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
image = { version = "0.25", default-features = false, features = [] }

[dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_Storage_FileSystem",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_Security",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
